--- a/source/homepage/homepage.css
+++ b/source/homepage/homepage.css
@@ -4,7 +4,6 @@
 	margin: 0;
 	box-sizing: border-box;
 	font-family: "Poppins", sans-serif;
-	color: #777
 }
 
 :root {
@@ -14,6 +13,11 @@
 	--task-list-color: white;
 	--box-shadow: lightgrey;
 	--input-shadow: #719ECE;
+
+	--left-icon: url('../icons/left-icon.png');
+	--right-icon: url('../icons/right-icon.png');
+
+	color: black;
 }
 
 [theme="dark"] {
@@ -23,17 +27,19 @@
 	--task-list-color: #1c1c1c;
 	--box-shadow: #080808;
 	--input-shadow: #d6d6d6;
-	div, h1, h2, h3, h4, li, textarea, span, button, th {
-		color: #FFFFFF;
-	}
 
-  .task-checkbox {
+	--left-icon: url('../icons/left-icon-dark.png');
+	--right-icon: url('../icons/right-icon-dark.png');
+
+	color: white;
+
+  /* .task-checkbox {
     border: white solid 1px;
   }
 
   .complete .task-checkbox {
     background: white;
-  }
+  } */
 }
 
 html {
@@ -340,7 +346,7 @@ button:hover {
 	width: 2em;
 	height: 2em;
 	border-radius: 4em;
-	background-image: url('../icons/left-icon.png');
+	background-image: var(--left-icon);
 	background-size: 14px 14px;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -352,7 +358,7 @@ button:hover {
 	height: 2em;
 	margin-left: 0.4em;
 	border-radius: 4em;
-	background-image: url('../icons/right-icon.png');
+	background-image: var(--right-icon);
 	background-size: 14px 14px;
 	background-repeat: no-repeat;
 	background-position: center;
